--- a/css/main.css
+++ b/css/main.css
@@ -106,3 +106,79 @@ h1, .subhead{
 .blue-container ul li:nth-child(3) img{
 	width: 8%;
 }
+
+.gray-container{
+	background: #F6F6F6;
+	padding: 4em 0 2em;
+	margin-top: -3%;
+}
+
+.gray-container ul li:first-child{
+	margin-bottom: 2em;
+}
+
+figure{
+	margin: 0;
+	padding: 0;
+}
+
+
+figcaption{
+	font-weight: bold;
+	color: #00C2FF;
+}
+
+h2{
+	margin-top:7%;
+}
+
+.cta{
+	background: #00CC80;
+	width: calc(100%-1em);
+	display: block;
+	color: #FFF;
+	border-radius: 20px;
+	padding: .5em;
+	text-decoration: none; /* this gets rid of the underline */
+	font-size: 1.5em;
+	margin: 3% auto 7%;
+	position: relative;
+	z-index: 4;
+}
+
+.footer-container{
+	width: 100%;
+	background: #3D444A;
+	color:#FFF;
+	padding: 3em 0;
+	border-top-right-radius: 40px;
+	transform:skewY(2deg);
+}
+
+.footer-container .container{
+	transform: skewY(-2deg);
+}
+
+.footer-container:before{
+	content:"";
+	width:40px;
+	height: 40px;
+	background-color: #3D444A;
+	position: absolute;
+	top:-39px;
+	z-index: -2;
+}
+
+
+.footer-container:after{
+	content:"";
+	width:80px;
+	height: 80px;
+	background-color: #FFF;
+	position: absolute;
+	z-index: -1;
+	top:-80px;
+	left:0;
+	border-radius: 50%;
+}
+
