--- a/css/main.css
+++ b/css/main.css
@@ -182,3 +182,54 @@ h2{
 	border-radius: 50%;
 }
 
+
+ul.footer-links{
+	margin: 0 auto;
+}
+
+ul.footer-links li{
+	display: inline-block;
+}
+
+ul.footer-links li a{
+	display: inline-block;
+	color: #9D9D9D;
+	font-size: .8em;
+}
+
+nav ul{
+	position: fixed;
+	width: 60%;
+	top: 0;
+	right: 0;
+	text-align: left;
+	background-color: rgb(36,41,4);
+	height: 100%;
+	z-index: 7;	
+	padding-top: 3em;
+}
+
+nav ul li a{
+	color: white;
+	text-decoration: none;
+	display: block;
+	width: 100%;
+	padding: 1em 2em;
+	background-color: rgb(49,55,59);
+}
+
+nav ul li a:hover{
+	background-color: rgb(65,73,78);
+}
+
+.exit-btn{
+	margin-bottom: 1em;
+	margin-top: -1.3em;
+	text-align: right;
+	padding: 0 1.4em;
+}
+
+.exit-btn img{
+	width: 15px;
+	cursor: pointer;
+}
