--- a/css/main.css
+++ b/css/main.css
@@ -192,7 +192,6 @@ ul.footer-links li{
 }
 
 ul.footer-links li a{
-	display: inline-block;
 	color: #9D9D9D;
 	font-size: .8em;
 }
@@ -203,7 +202,7 @@ nav ul{
 	top: 0;
 	right: 0;
 	text-align: left;
-	background-color: rgb(36,41,4);
+	background-color: rgb(36,41,44);
 	height: 100%;
 	z-index: 7;	
 	padding-top: 3em;
@@ -215,11 +214,11 @@ nav ul li a{
 	display: block;
 	width: 100%;
 	padding: 1em 2em;
-	background-color: rgb(49,55,59);
+	background-color: rgb(49, 55, 59);
 }
 
 nav ul li a:hover{
-	background-color: rgb(65,73,78);
+	background-color: rgb(65, 73, 78);
 }
 
 .exit-btn{
@@ -232,4 +231,168 @@ nav ul li a:hover{
 .exit-btn img{
 	width: 15px;
 	cursor: pointer;
+}
+
+@media only screen and (min-width: 650px){
+
+	.server{
+		width: 50%;
+	}
+
+	h1{
+		font-size: 3em;
+		margin: 0;
+	}
+
+	.subhead{
+		font-size: 1.4em;
+		margin-bottom: 12%;
+	}
+
+	.blue-container{
+		margin: 0;
+	}
+
+	.blue-container img{
+		width: 20%;
+	}
+
+	.blue-container ul li:nth-child(3) img{
+		width: 11%;
+		margin-top: -6px;
+	}
+
+	.blue-container ul{
+		display: flex;
+		margin-top: -1em;
+		align-items: center;
+	}
+
+	.blue-container ul li{
+		margin-bottom: 0;
+	}
+
+	.blue-container ul li p{
+		padding: 0 .8em;
+	}
+
+	.gray-container ul{
+		display: flex;
+	}
+
+	nav ul{
+		width: 40%;
+	}
+}
+
+@media only screen and (min-width: 875px){
+
+	.subhead{
+		margin-bottom: 15%;
+	}
+
+	.blue-container ul{
+		margin: 0 0 4% 0;
+	}
+
+	.gray-container ul{
+		margin: 4% 0 0;
+	}
+}
+
+@media only screen and (min-width: 1024px){
+
+	.cta{
+		width: 50%;
+	}
+
+	.container{
+		width: 80%;
+		margin: 0 auto;
+	}
+
+	.show-desktop{
+		display: block;
+		margin: 0 auto 13% auto;
+	}
+
+	.hide-desktop{
+		display: none;
+	}
+
+	nav ul{
+		position: inherit;
+		width: auto;
+		background: none;
+		height: none;
+		display: flex;
+		padding-top: 0;
+	}
+
+	nav ul li{
+		float: left;
+	}
+
+	nav ul li a{
+		color: black;
+		background-color: inherit;
+		text-align: right;
+		padding: 1em 2em;
+	}
+
+	nav ul li a:hover{
+		background-color: inherit;
+	}
+	
+	.scroll{
+		width: 30px;
+		animation: move .7s infinite alternate;
+	}
+
+	@keyframes move{
+		0%{
+			transform: translateY(0px);
+		}
+		
+		100%{
+			transform: translateY(20px);
+		}
+	}
+}
+
+@media only screen and (min-width: 1600px){
+
+	.server{
+		width:40%;
+		margin: 5em auto 4em 15%;
+	}
+
+	.container{
+		width: 70%;
+	}
+
+	.blue-container{
+		padding: 7em 0 2em;
+	}
+
+	.blue-container ul li p, blockquote{
+		font-size: 1.3em;
+	}
+
+	.gray-container{
+		padding: 6em 0 4em;
+	}
+
+	h2{
+		margin-top: 4em;
+	}
+
+	.blue-container img {
+		width: 15%;
+	}
+
+	.blue-container ul li:nth-child(3) img{
+		width: 8%;
+		margin-top: -4px;
+	}
 }
